Cleaned up code ...